jasper/force-app/main/default/objects/Feedback_Response__c/fields/Answer_Upload__c.field-meta.xml
<CustomField>
    <fullName>Answer_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Answer Upload</label>
    <type>Checkbox</type>
</CustomField>