jasper/force-app/main/default/objects/Feedback_Response__c/fields/Answers_For_Post_7_Day_Service__c.field-meta.xml
<CustomField>
    <fullName>Answers_For_Post_7_Day_Service__c</fullName>
    <label>Answers For Post 7 Day Service</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>