jasper/force-app/main/default/objects/Feedback_Response__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Job_Card__c)),
    Job_Card__r.Service_Center__r.BillingCity,
    IF(
        NOT(ISBLANK(Order__c)),
        Order__r.Dealer__r.BillingCity,
        IF(
            NOT(ISBLANK(Lead__c)),
            Lead__r.City,
            &quot;&quot;
        )
    )
)</formula>
    <label>City</label>
    <type>Text</type>
</CustomField>