jasper/force-app/main/default/objects/Feedback_Response__c/fields/Expiration_Hours__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Hours__c</fullName>
    <label>Expiration (Hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>