jasper/force-app/main/default/objects/Feedback_Response__c/fields/Expiry_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date_Time__c</fullName>
    <label>Expiry Date/Time</label>
    <type>DateTime</type>
</CustomField>