jasper/force-app/main/default/objects/Feedback_Response__c/fields/Feedback_Question__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Feedback Question</label>
    <referenceTo>Feedback_Question__c</referenceTo>
    <relationshipLabel>Feedback Responses</relationshipLabel>
    <relationshipName>Feedback_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>