jasper/force-app/main/default/objects/Feedback_Response__c/fields/Form_URL__c.field-meta.xml
<CustomField>
    <fullName>Form_URL__c</fullName>
    <label>Form URL</label>
    <type>Url</type>
</CustomField>