jasper/force-app/main/default/objects/Feedback_Response__c/fields/JC_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>JC_Phone_Number__c</fullName>
    <formula>Job_Card__r.Account.Phone</formula>
    <label>JC_Phone Number</label>
    <type>Text</type>
</CustomField>