jasper/force-app/main/default/objects/Feedback_Response__c/fields/Job_Card__c.field-meta.xml
<CustomField>
    <fullName>Job_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Card</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Feedback Responses</relationshipLabel>
    <relationshipName>Feedback_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>