jasper/force-app/main/default/objects/Feedback_Response__c/fields/Name_Of_Form__c.field-meta.xml
<CustomField>
    <fullName>Name_Of_Form__c</fullName>
    <label>Name Of Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>