jasper/force-app/main/default/objects/Feedback_Response__c/fields/Opened_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Opened_Date_Time__c</fullName>
    <label>Opened Date/Time</label>
    <type>DateTime</type>
</CustomField>