jasper/force-app/main/default/objects/Feedback_Response__c/fields/Order_Phone_number__c.field-meta.xml
<CustomField>
    <fullName>Order_Phone_number__c</fullName>
    <formula>Order__r.Account.Phone</formula>
    <label>Order - Phone number</label>
    <type>Text</type>
</CustomField>