jasper/force-app/main/default/objects/Feedback_Response__c/fields/Sent_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Sent_Date_Time__c</fullName>
    <label>Sent Date/Time</label>
    <type>DateTime</type>
</CustomField>