jasper/force-app/main/default/objects/Feedback_Response__c/fields/Store_Name__c.field-meta.xml
<CustomField>
    <fullName>Store_Name__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Job_Card__c)),
    Job_Card__r.Service_Center__r.Store_Name__c,
    IF(
        NOT(ISBLANK(Order__c)),
        Order__r.Store_Name__c,
        IF(
            NOT(ISBLANK(Lead__c)),
            Lead__r.Stores_Name__c,
            &quot;&quot;
        )
    )
)</formula>
    <label>Store Name</label>
    <type>Text</type>
</CustomField>