jasper/force-app/main/default/objects/Feedback_Response__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Response_Status__c</columns>
    <columns>Name_Of_Form__c</columns>
    <columns>Form_Name__c</columns>
    <columns>Expiry_Date_Time__c</columns>
    <columns>Sent_Date_Time__c</columns>
    <columns>Submitted_Date_Time__c</columns>
    <columns>Rating__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>